# rsmarketstore

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
examples/ohlcv/: candle.proto  main.rs
examples/ohlcv/candle/: mod.rs
examples/stream/: main.rs
examples/stream/candle/: candle.rs  mod.rs
src/: error.rs  grpc.rs  interval.rs  lib.rs  params.rs  proto.rs  stream.rs
src/pynum/: error.rs  mod.rs  serde.rs  value.rs
src/serde/: error.rs  mod.rs  serde.rs  value.rs
