[package]
name = "marketstore"
version = "0.1.1"
edition = "2021"
description = "Marketstore rust driver"
authors = ["Kamalakar Gadireddy"]
readme = "README.md"
homepage = "https://github.com/ananthartha/rsmarketstore"
repository = "https://github.com/ananthartha/rsmarketstore"
license = "MIT"
license-file = "LICENSE"
keywords = ["marketstore", "financial", "timeseries"]
categories = ["parsing", "encoding", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.4.3"
prost = "^0.11.3"
thiserror = "^1.0.38"
serde = { version = "^1.0.152", optional = true, default-features = false }
tokio = { version = "^1.23.0", features=["rt-multi-thread"] }
tonic = "^0.8.3"
tokio-tungstenite = { version = "^0.18.0", optional = true }
rmp-serde = { version = "^1.1.1", optional = true, default-features = false }
futures-util = { version = "^0.3.25", optional = true, default-features = false }
futures-channel = { version = "^0.3.25", optional = true, default-features = false }

[build-dependencies]
tonic = "^0.8.3"
tonic-build = { version = "^0.8.3" }
reqwest = { version = "^0.11.11", features = ["blocking"] }
temp-dir = "^0.1.11"
change-case = "^0.2.0"

[features]
default = []

serde = ["serde/derive"]

stream = ["serde", "tokio-tungstenite", "rmp-serde", "futures-util", "futures-channel"]

[[example]]
name = "ohlcv"
required-features = ["serde"]

[[example]]
name = "stream"
required-features = ["stream"]
